force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/leaseworks__Financial_Statements_Obligations__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Financial Statements Obligations</label>
    <nameField>
        <label>Financial Statements Obligations  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements Obligations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>