force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__Comment__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Comment__c</fullName>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>