force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__End_Date__c</fullName>
    <inlineHelpText>Date when FS Obligation ends, by default this is set to Lease end date</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>