force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__Financial_Year_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_Year_End__c</fullName>
    <formula>Text( DAY(  leaseworks__First_Financial_Statement_Period_Ending__c)) &amp; &quot; &quot; &amp;  

CASE(MONTH( leaseworks__First_Financial_Statement_Period_Ending__c), 
  1, &quot;January&quot;, 
  2, &quot;February&quot;, 
  3, &quot;March&quot;,  
  4, &quot;April&quot;,  
  5, &quot;May&quot;,  
  6, &quot;June&quot;, 
  7, &quot;July&quot;, 
  8, &quot;August&quot;, 
  9, &quot;September&quot;,
 10, &quot;October&quot;, 
 11, &quot;November&quot;,
 12, &quot;December&quot;, &quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year End</label>
    <type>Text</type>
</CustomField>