force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__First_Financial_Statement_Period_Ending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__First_Financial_Statement_Period_Ending__c</fullName>
    <label>First Financial Statement Period Ending</label>
    <required>true</required>
    <type>Date</type>
</CustomField>