force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Grace_Period__c</fullName>
    <inlineHelpText>Number of days after the Due Date the lessee is obliged to send the FS by</inlineHelpText>
    <label>Grace Period</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>