force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Report</fullName>
            </value>
            <value>
                <fullName>Audited Financial Statements</fullName>
            </value>
            <value>
                <fullName>Balance Sheet</fullName>
            </value>
            <value>
                <fullName>Cash Flow Statement</fullName>
            </value>
            <value>
                <fullName>Management Statements</fullName>
            </value>
            <value>
                <fullName>Profit &amp; Loss Statement</fullName>
            </value>
            <value>
                <fullName>Unaudited Financial Statements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>