force-app/main/default/objects/leaseworks__Financial_Statements_Obligations__c/fields/leaseworks__Y_Hidden_Financial_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Financial_Year_End_Date__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Lessee_New__r.leaseworks__Financial_Year_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Financial Year End Date</label>
    <type>Date</type>
</CustomField>